kubernetes/kms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kms-webui-svc
  namespace: kms
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: kms
---
apiVersion: v1
kind: Service
metadata:
  name: kms-svc
  namespace: kms
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.2.210 #adjust to fit your environment
  ports:
  - port: 1688
    targetPort: 1688
    protocol: TCP
  selector:
    app: kms
